# zed-custom-code-folding

./: .gitignore  LICENSE  README.md  extension.toml
.github/workflows/: ci.yml  release.yml
crates/custom-code-folding-server/: Cargo.toml
crates/custom-code-folding-server/src/: config.rs  folding.rs  main.rs
crates/custom-code-folding-server/tests/: integration.rs
src/: lib.rs
