[package]
name = "custom-code-folding-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "custom-code-folding-server"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dashmap = "6"
